--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
 }
 
 .navbar-bg {
@@ -13,6 +13,9 @@ body {
 
 .sub-navbar-bg {
   background-color: #202D39;
+  position: sticky;
+  top: 0;
+  z-index: 500;
 }
 
 .search-field-bg {
